--- a/build.properties
+++ b/build.properties
@@ -2,4 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/HikariCP-3.4.1.jar,\
+               lib/mysql-connector-java-5.1.47-bin.jar
+source.lib/HikariCP-3.4.1.jar = 
+jars.compile.order = .,\
+                     lib/HikariCP-3.4.1.jar,\
+                     lib/mysql-connector-java-5.1.47-bin.jar
+source.lib/mysql-connector-java-5.1.47-bin.jar = 
