SQLの送信を修正 ？を使うやつに変更 まだ試してない 各メソッドにSQL送信の文を記述

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/HikariCP-3.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.47-bin.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/appengine-api-1.0-sdk-1.9.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
