--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/slf4j-api-1.7.25.jar,\
+               lib/appengine-api-1.0-sdk-1.9.19.jar
 jars.compile.order = .
 javacDefaultEncoding.. = UTF-8
